<?xml version="1.0"?>
<package format="2">
  <name>dubins_trajectory_generator</name>
  <version>0.0.0</version>

  <description> 
    Dubins trajectory generation for MAV.
  </description>

  <author email="piyushk@iitk.ac.in">Piyush Kumar</author>
  <author email="dvyanshu@iitk.ac.in">Divyanshu Gangwar</author>

  <maintainer email="piyushk@iitk.ac.in">Piyush Kumar</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>mav_msgs</depend>
  <depend>mav_planning_common</depend>
  <depend>visualization_msgs</depend>
  <depend>mav_trajectory_generation_ros</depend>
 

</package>