<?xml version="1.0"?>
<package format="2">
  <name>mast_finder</name>
  <version>0.0.0</version>
  <description>The mast_finder package</description>

  <maintainer email="atharva@todo.todo">atharva</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>

</package>
